methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:11: error: ':' expected but ')' found.
def isFacingTrail(couleur):Boolean = {
                         ^SlugSnail:35: error: identifier expected but '}' found.
}
^